# EmbedPlayground

./: .gitmodules  README.md
AnalogOutHelloWorld/: CMakeLists.txt  main.cpp
AudioLib/: AnalogOutRenderer.h  CMakeLists.txt  StereoAnalogOutRenderer.h  StereoValue.h
BlinkLed/: CMakeLists.txt
IntSynthLib/: CMakeLists.txt  IntBipolarLUTShaper.h  IntOnePoleFilter.h  IntOperatorFactory.h  LUTSaturationTanH.h
MCP4822/: CMakeLists.txt  MCP4822.cpp  MCP4822.h
Mcp4822HelloWorld/: CMakeLists.txt  main.cpp
MidiLib/: CMakeLists.txt  LogMidiHandler.h  MidiNoteFrequencies.h  RawMidiByteParser.h
Pcf8591HelloWorld/: CMakeLists.txt  main.cpp
Peripherals/: CMakeLists.txt  MCP4822.cpp  PCF8591.cpp  PCF8591.h
RotaryEncoder/: CMakeLists.txt  RotaryEncoder.cpp  RotaryEncoder.h
SerialHelloWorld/: CMakeLists.txt  main.cpp
SerialMidiInHelloWorld/: CMakeLists.txt  main.cpp
SimpleEffect1/: CMakeLists.txt  OscillatorSource.h  StereoAnalogInSource.h  main.cpp
SimpleSynth/: CMakeLists.txt  CombNoiseController.cpp  CombNoiseController.h  IntSimpleOscillatorController.cpp  IntSimpleOscillatorController.h  KarplusStrongController.cpp  KarplusStrongController.h  MidiNoteFrequencies.cpp  SimpleOscillatorController.cpp  SimpleOscillatorController.h  Speeds.txt  main.cpp
SimpleSynth2/: AnalogInSource.h  AnalogOutRenderer.h  CMakeLists.txt  Oscillator.h  OscillatorSource.h  RenderManager.h  main.cpp
SimpleSynth3/: CMakeLists.txt  OscillatorSource.h  main.cpp
SynthLib/: AREnvelope.h  CMakeLists.txt  CombFilter.h  DelayLine2.h  PhaseStep.h  PolyKarplusStrong.h  SelectableOperator.h  SelectableOperatorFactory.cpp  SelectableOperatorFactory.h  SimpleOscillator.h
USBMidiHelloWorld/: CMakeLists.txt  main.cpp
Utilities/: AnalogInManager.h  AnalogOutBuffer.h  CMakeLists.txt  InterruptInManager.h  SerialBuffer.h  StablePot.h
UtilitiesHelloWorld/: CMakeLists.txt  main.cpp
